Fixed overflow problem and grid issues Relates to css styling

--- a/style.css
+++ b/style.css
@@ -67,14 +67,14 @@ button {
   display: inline-block;
   font-size: 1rem;
   width: 30%;
-  height: 50px;
+  height: 60px;
   text-align: center;
+	white-space: nowrap;
   opacity: 0.8;
   padding: 1%;
-  margin: 0;
-  position: relative;
+  margin: 0.1rem 0;
   border: none;
-  overflow: hidden;
+  text-overflow: hidden;
 }
 
 .choose-your-line {
